<resources>
    <string name="app_name">MakeIt</string>
    <string name="signUp">Registrati</string>
    <string name="login">Accedi</string>
    <string name="hint_name">Nome</string>
    <string name="hint_surname">Cognome</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Conferma password</string>
    <string name="is_business_account_question">Profilo aziendale?</string>
    <string name="is_business">Si</string>
    <string name="is_not_business">No</string>
    <string name="cancel">Annulla</string>
    <string name="confirm">Conferma</string>
    <string name="title_activity_manual_page">Pagina del manuale</string>
    <string name="title_home">Home</string>
    <string name="title_activity_manual">ManualActivity</string>
    <string name="reset_password"><u>Password dimenticata?</u></string>
    <string name="hint_new_email">Nuova email</string>
    <string name="description_label">Descrizione</string>
    <string name="start">Start</string>
    <string name="no_name">Nome non disponibile</string>
    <string name="no_description">Descrizione non disponibile</string>
    <string name="available_from">"Disponibile dal: "</string>
    <string name="no_date">non disponibile</string>
    <string name="select_file">Cerca</string>
    <string name="select_category">Seleziona la categoria: </string>
    <string name="location_hint">la posizione del file verrà mostrata qui</string>
    <string name="upload_file">Conferma</string>
    <string name="filter_category_label">"Seleziona la categoria: "</string>
    <string name="modify">Modifica</string>
    <string name="owner">"Pubblicato da: "</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading">Loading...</string>
</resources>