<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical" android:gravity="center_vertical" android:layout_alignParentTop="false">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/baseline_construction_black_48"
             android:layout_weight="0" android:layout_gravity="center"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0" android:gravity="center_horizontal">
        <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp" tools:srcCompat="@tools:sample/avatars"
                 android:layout_weight="0"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/login_username" android:layout_weight="0"
                android:hint="@string/hint_username"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0" android:gravity="center_horizontal">
        <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp" tools:srcCompat="@tools:sample/avatars"
                 android:layout_weight="0"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/login_password"
                 android:layout_weight="0"
                android:hint="@string/hint_password"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
            android:gravity="center_vertical" android:layout_weight="0"
            android:layout_marginTop="150dp">
        <Button
                android:text="@string/signUp"
                android:layout_width="157dp"
                android:layout_height="wrap_content" android:id="@+id/sign_up_login_page"/>
        <Button
                android:text="@string/login"
                android:layout_width="157dp"
                android:layout_height="wrap_content" android:id="@+id/login"/>
    </LinearLayout>
</LinearLayout>